@@ -1573,15 +1573,15 @@ set_flag(dbref player, dbref thing, const char *flag, int negate,
       safe_format(tbuf1, &tp, T("%s is no longer listening."), Name(thing));
       *tp = '\0';
       if (GoodObject(Location(thing)))
-        notify_except(Contents(Location(thing)), NOTHING, tbuf1,
+        notify_except(Location(thing), NOTHING, tbuf1,
                       NA_INTER_PRESENCE);
-      notify_except(Contents(thing), NOTHING, tbuf1, 0);
+      notify_except(thing, NOTHING, tbuf1, 0);
     }
     if (IsRoom(thing) && is_flag(f, "MONITOR") && !hear && !Listener(thing)) {
       tp = tbuf1;
       safe_format(tbuf1, &tp, T("%s is no longer listening."), Name(thing));
       *tp = '\0';
-      notify_except(Contents(thing), NOTHING, tbuf1, NA_INTER_PRESENCE);
+      notify_except(thing, NOTHING, tbuf1, NA_INTER_PRESENCE);
     }
     if (is_flag(f, "AUDIBLE")) {
       switch (Typeof(thing)) {
@@ -1591,17 +1591,17 @@ set_flag(dbref player, dbref thing, const char *flag, int negate,
           safe_format(tbuf1, &tp, T("Exit %s is no longer broadcasting."),
                       Name(thing));
           *tp = '\0';
-          notify_except(Contents(Source(thing)), NOTHING, tbuf1, 0);
+          notify_except(Source(thing), NOTHING, tbuf1, 0);
         }
         break;
       case TYPE_ROOM:
-        notify_except(Contents(thing), NOTHING,
+        notify_except(thing, NOTHING,
                       T("Audible exits in this room have been deactivated."),
                       0);
         break;
       case TYPE_THING:
       case TYPE_PLAYER:
-        notify_except(Contents(thing), thing,
+        notify_except(thing, thing,
                       T("This room is no longer broadcasting."), 0);
         notify(thing, T("Your contents can no longer be heard from outside."));
         break;
@@ -1634,15 +1634,15 @@ set_flag(dbref player, dbref thing, const char *flag, int negate,
       safe_format(tbuf1, &tp, T("%s is now listening."), Name(thing));
       *tp = '\0';
       if (GoodObject(Location(thing)))
-        notify_except(Contents(Location(thing)), NOTHING, tbuf1,
+        notify_except(Location(thing), NOTHING, tbuf1,
                       NA_INTER_PRESENCE);
-      notify_except(Contents(thing), NOTHING, tbuf1, 0);
+      notify_except(thing, NOTHING, tbuf1, 0);
     }
     if (IsRoom(thing) && is_flag(f, "MONITOR") && !hear && !listener) {
       tp = tbuf1;
       safe_format(tbuf1, &tp, T("%s is now listening."), Name(thing));
       *tp = '\0';
-      notify_except(Contents(thing), NOTHING, tbuf1, 0);
+      notify_except(thing, NOTHING, tbuf1, 0);
     }
     /* notify for audible exits */
     if (is_flag(f, "AUDIBLE")) {
@@ -1653,16 +1653,16 @@ set_flag(dbref player, dbref thing, const char *flag, int negate,
           safe_format(tbuf1, &tp, T("Exit %s is now broadcasting."),
                       Name(thing));
           *tp = '\0';
-          notify_except(Contents(Source(thing)), NOTHING, tbuf1, 0);
+          notify_except(Source(thing), NOTHING, tbuf1, 0);
         }
         break;
       case TYPE_ROOM:
-        notify_except(Contents(thing), NOTHING,
+        notify_except(thing, NOTHING,
                       T("Audible exits in this room have been activated."), 0);
         break;
       case TYPE_PLAYER:
       case TYPE_THING:
-        notify_except(Contents(thing), thing,
+        notify_except(thing, thing,
                       T("This room is now broadcasting."), 0);
         notify(thing, T("Your contents can now be heard from outside."));
         break;
